--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,4 @@
+
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
@@ -11,7 +12,7 @@
         <ul class="nav">
           <li class="<%=is_active('home')%>"><a href="/"><i class="icon-home icon-white"></i>Home</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li class="<%=is_active('uva')%>"><a href="/uva">Intro to UVA</a></li>
               <li class="<%=is_active('ksa')%>"><a href="/ksa">KSA</a></li>
@@ -20,7 +21,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info<b class="caret"></b></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown">Info<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li class="<%=is_active('qna')%>"><a href="/qna">Q & A</a></li>
               <li class="<%=is_active('recruit')%>"><a href="/recruit">Recruiting</a></li>
@@ -28,7 +29,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">For Members<b class="caret"></b></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown">For Members<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li class="<%=is_active('ksafree')%>"><a href="/ksafree">KSA Freeboard</a></li>
               <li class="<%=is_active('kogsafree')%>"><a href="/kogsafree">KOGSA Freeboard</a></li>
