--- a/app/views/ksafreeposts/ksafree.html.erb
+++ b/app/views/ksafreeposts/ksafree.html.erb
@@ -1,6 +1,6 @@
+ <% if user_signed_in?  %>
 <h1 align=center>KSA 자유게시판</h1>
-
-<table>
+    <table>
   <tr>
     <th width="70%">제목</th>
     <th width="10%">글쓴이</th>
@@ -22,7 +22,11 @@
   </tr>
 <% end %>
 </table>
+	<p align=right><button> <%= link_to '쓰기', new_ksafreepost_path %></button></p>
+<% else %> 
+   <% redirect_to_sign_in %>
+<% end %>
 
 
 
-<p align=right><button> <%= link_to '쓰기', new_ksafreepost_path %></button></p>
+
